[tool.poetry]
name = "gp-urlobject"
version = "2.4.3"
description = "A utility class for manipulating URLs."
authors = ["Zachary Voase <z@zacharyvoase.com>"]
license = "Public Domain"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: Public Domain",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]


[tool.poetry.dependencies]
python = ">=3.8.1,<4.0.0"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
pyupgrade = "^3.15.0"
pre-commit = "^3.5.0"
black = "^23.9.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
coverage = {extras = ["toml"], version = "^7.3.2"}
pytest = "^7.4.2"
bandit = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
